linux-tips/kubernetes/day-5-ingress/class-resources/nginx-ingress-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress-lb
  revisionHistoryLimit: 3 # Para que possamos fazer o Rollback, quantidade máxima de revisões disponíveis
  template:
    metadata:
      labels:
        app: nginx-ingress-lb
    spec:
      terminationGracePeriodSeconds: 60 # Tempo para esperar o container morrer sozinho
      serviceAccount: nginx
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.9.0 # Imagem oficial do nginx-ingress-controller
          imagePullPolicy: Always
          readinessProbe: # Quando estará pronto antes requisições do Service para o Pod
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
          livenessProbe: # Verificação periódica da saúde do Pod
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10 # Quanto esperar para começar a fazer a prova de vida
            timeoutSeconds: 5 # Quanto tempo esperar uma resposta antes de considerar o container não sádio
          args: # Argumentos/Comandos que serão realizados dentro do Pod
            - /nginx-ingress-controller
            - --default-backend-service=ingress/default-backend
            - --configmap=ingress/nginx-ingress-controller-conf
            - --v=2
          ports:
            - containerPort: 80
            - containerPort: 18080
