linux-tips/kubernetes/day-5-ingress/class-resources/svc-app1.yaml
kind: Service
apiVersion: v1
metadata:
  name: appsvc1
spec:
  selector:
    app: app1
  ports:
  - port:  80
    protocol: TCP
    targetPort: 80
