linux-tips/kubernetes/day-5-ingress/class-resources/svc-app2.yaml
kind: Service
apiVersion: v1
metadata:
  name: appsvc2
spec:
  selector:
    app: app2
  ports:
  - port:  80
    protocol: TCP
    targetPort: 80
